# glrs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
doc/: agenda.txt  js-usage.txt  matrix-op-example.txt  readme-js.json  readme-rust.json  vector-op-example.txt  wasm-by-rust.txt  without-wasm-pack.txt  xtask.txt
js/: Makefile  distance.js  index.js  package-lock.json  package.json  plane.js  vector-array.js  vector.js
js/test/: distance.js  index.js  matrix.js  plane.js  vector-array.js  vector.js
src/: distance.rs  err.rs  glop.rs  lib.rs  matrix.rs  matrixi.rs  plane.rs  segment.rs
src/geom/: d2.rs  error.rs  mod.rs
src/matrix/: error.rs  mod.rs
src/wasm/: distance.rs  distance_indices.rs  distances.rs  float.rs  float_indices.rs  float_vec.rs  geom.rs  matrix.rs  mod.rs  plane.rs  segment.rs  vector.rs  vector_array.rs
tests/: geom_0.rs  geom_1.rs  matrix_0.rs  matrix_1.rs  matrix_2.rs  plane_0.rs  plane_1.rs  plane_2.rs  segment_0.rs  segment_1.rs  vector_0.rs
xtask/: Cargo.toml
xtask/src/: build.rs  doc.rs  error.rs  install.rs  js.rs  main.rs  package.rs  project.rs  tools.rs  verb.rs
